foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sff_in_binary_op.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 6zCILjnB9H2LEvTxwe58zxu5cUQvfPQ6ajCiV/qec3yYno402iDA03+ICtJn8YXiDLyPssJRCsxljGcLgdjPBg==
INPUT: {a=<<3>>; a + 7;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  StayFullyFoolish [INDEPENDENT]
    Int(3) [INDEPENDENT]
  Operator(+) [EMBRYONIC]
    Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
    Int(7) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  a = 
  StayFullyFoolish [INDEPENDENT]
    Int(3) [INDEPENDENT]
  Int(10) [CONSTANT]
