foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sff_nested.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 daffPV0enmxbgWTu+CS3fPSQYXoCpxM5m32Z/Hw7jDfNhjGOkFQAl2oQiXZvcSdrlGJtZfVtDZj/hS0rlYHsDw==
INPUT: {a=1,b=2; c=<<a+<<b>>>>; c; c;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      StayFullyFoolish [INDEPENDENT]
        Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^c$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [WOCONSTANIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  c = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      StayFullyFoolish [INDEPENDENT]
        Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^c$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Operator(+) [WOCONSTANIC]
      Int(1) [INDEPENDENT]
      StayFullyFoolish [INDEPENDENT]
        Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^c$', dir=BACKWARD, FREE) [WOCONSTANIC]
    Operator(+) [WOCONSTANIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      StayFullyFoolish [INDEPENDENT]
        Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
