foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sff_resolves_on_each_use.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 wJBK3nilpfDFtyArSVprN10Gxqh4zsZczWJtisbbVgKiNFt8lLXmksK/eGSPVg5PN3W881aKyD+enB9TfYsyAw==
INPUT: {a=1; b=2; s=<<a+b>>; a=10; s;}
[0] PARSED:
Brane [EMBRYONIC]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  s = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [EMBRYONIC]
      Search(pattern='^b$', dir=BACKWARD, FREE) [EMBRYONIC]
  a = 
  Int(10) [INDEPENDENT]
  Search(pattern='^s$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  a = 
  Int(1) [INDEPENDENT]
  b = 
  Int(2) [INDEPENDENT]
  s = 
  StayFullyFoolish [INDEPENDENT]
    Operator(+) [EMBRYONIC]
      Search(pattern='^a$', dir=BACKWARD, FREE) [CONSTANT]
      Search(pattern='^b$', dir=BACKWARD, FREE) [CONSTANT]
  a = 
  Int(10) [INDEPENDENT]
  Int(12) [CONSTANT]
