foolish/foolish-core/src/snapshots/foolish_core__approval_tests__sff_vs_sf_timing_difference.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 /crPqxeqld+ZYsvpjVpAypVN+y7UiDlGwxfzAdZy39ijdzi0c36VUXVr2ax757EvkkitBYSHoIfEYzA5sARGBA==
INPUT: {x = 1; sf = <x>; sff = <<x>>; x = 10; sf; sff;}
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(1) [INDEPENDENT]
  sf = 
  StayFoolish [EMBRYONIC]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  sff = 
  StayFullyFoolish [INDEPENDENT]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  x = 
  Int(10) [INDEPENDENT]
  Search(pattern='^sf$', dir=BACKWARD, FREE) [EMBRYONIC]
  Search(pattern='^sff$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(1) [INDEPENDENT]
  sf = 
  StayFoolish [CONSTANT]
    Search(pattern='^x$', dir=BACKWARD, FREE) [CONSTANT]
      Int(10) [INDEPENDENT]
  sff = 
  StayFullyFoolish [INDEPENDENT]
    Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
  x = 
  Int(10) [INDEPENDENT]
  Int(10) [INDEPENDENT]
  Int(10) [INDEPENDENT]
