foolish/foolish-core/src/snapshots/foolish_core__approval_tests__shebang.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: #!/usr/bin/env foolish
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(1) [INDEPENDENT]
  y = 
  Int(2) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  x = 
  Int(1) [INDEPENDENT]
  y = 
  Int(2) [INDEPENDENT]
