foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simpleDivisionIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 YaKdQ3ZZRPsELNoHxclLzpGaRYhbwGoIX9q9+yHp/zThr3mIazyqmd0/Kt0wMga7F9qtpSbVhlU5U3C4JgrYBg==
INPUT: {15 / 3;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(/) [EMBRYONIC]
    Int(15) [INDEPENDENT]
    Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(5) [CONSTANT]
