foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simpleIdentifierIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 kmyKxZQ8zP2I5OJWBP4TFAThAhUVMUOAF1eZe9p5xArSXjIT/CaEFohWLWcj9oT7Q3G+UwJagCNMA57euXRHCA==
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(42) [INDEPENDENT]
  Search(pattern='^x$', dir=BACKWARD, FREE) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(42) [INDEPENDENT]
  Int(42) [INDEPENDENT]
