foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simpleMultiplicationIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 WdKNo3/Ra/Uxww6WLbqHRU9ZN8q+oNNXMxNg+hWHNqf/LvPo7SHWkwZnlSrfcpzIBS/PCR4EnogsPueN+ObTDw==
INPUT: {6 * 7;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(*) [EMBRYONIC]
    Int(6) [INDEPENDENT]
    Int(7) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(42) [CONSTANT]
