foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simpleRegexSearchIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
INPUT: {
[0] PARSED:
Brane [EMBRYONIC]
  x = 
  Int(5) [INDEPENDENT]
  result = 
  Search(pattern='y', dir=BACKWARD, ANCHORED) [EMBRYONIC]
RESULT:
Brane [CONSTANT]
  x = 
  Int(5) [INDEPENDENT]
  result = 
  Int(1) [INDEPENDENT]
