foolish/foolish-core/src/snapshots/foolish_core__approval_tests__simpleSubtractionIsApproved.snap
---
source: foolish-core/src/lib.rs
expression: output
---
SIG: dc5f586cda43023e707697692c78032300a24b1b813cbf1ccb770080d1a7b683 cLzcFlxX1ZUS19LhM8BumbUxDLDuLZoqiSAoPN6Ikxas9Aw4MMOg1Yfnx6yrxrCuaEZ080yd2FL1w1yAVdqECQ==
INPUT: {10 - 3;}
[0] PARSED:
Brane [EMBRYONIC]
  Operator(-) [EMBRYONIC]
    Int(10) [INDEPENDENT]
    Int(3) [INDEPENDENT]
RESULT:
Brane [CONSTANT]
  Int(7) [CONSTANT]
